messo la data in basso a destra su ogni card

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <h1 class="text-primary mt-3 ">Traccia 2</h1>
         <div class="row">
             <label for="titolo">Titolo</label>
-            <input type="text" placeholder="Titolo Articolo" id="titolo">
+            <input type="text" placeholder="Titolo Articolo" name= "titolo" id="titolo">
             <label for="paragrafo">Paragrafo</label>
-            <textarea name="" placeholder="Scrivi il testo dell'articolo" id="paragrafo" cols="30" rows="5"></textarea>
+            <textarea name="paragrafo" placeholder="Scrivi il testo dell'articolo" id="paragrafo"  cols="30" rows="5"></textarea>
         </div>
         <button id="btn4" class="mt-2">Crea articolo</button>
     </div>
